--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-session": "^1.18.0",
+    "express-validator": "^7.2.0",
     "mongodb": "^6.8.0",
-    "mongoose": "^8.5.4"
+    "mongoose": "^8.5.4",
+    "multer": "^1.4.5-lts.1",
+    "pdfkit": "^0.15.0"
   }
 }
